--- a/Docker/config/config.yml.dist
+++ b/Docker/config/config.yml.dist
@@ -46,11 +46,14 @@ mail:
 server administrator email: {{SERVERADMIN}}
 default interview: docassemble.base:data/questions/default-interview.yml
 language: en
-locale: en_US.utf8
+locale: en_GB.utf8
 os locale: {{LOCALE}}
 timezone: {{TIMEZONE}}
 redis: {{REDIS}}
 rabbitmq: {{RABBITMQ}}
+default admin account:
+  email: question-ms@landregistry.gov.uk
+  password: HM7Rr@wks
 voicerss:
   enable: False
   key: ae8734983948ebc98239e9898f998432
@@ -86,3 +89,4 @@ root: {{POSTURLROOT}}
 words:
   - docassemble.base:data/sources/us-words.yml
 allow non-idempotent questions: False
+
